docs: record Robolectric acceptance and profile plugin upgrade